deployment/base/clickhouse.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clickhouse
  labels: &LABELS
    app: clickhouse
spec:
  selector:
    matchLabels: *LABELS
  template:
    metadata:
      labels: *LABELS
    spec:
      containers:
        - name: clickhouse
          resources:
            requests:
              cpu: "0.5"
              memory: "1Gi"
            limits:
              cpu: "1"
              memory: "3Gi"
          image: registry.jetbrains.team/p/ij-report-aggregator-deployment/containers/clickhouse@sha256:f7a673236e9fce21955225622421132dd127dfe454c616efae98ad9d66767eed
          volumeMounts:
            - name: clickhouse-data
              mountPath: /var/lib/clickhouse
        # backup requires access to volume, so, it cannot be done using k8s cron job
        - name: clickhouse-backup
          image: ko://github.com/JetBrains/ij-perf-report-aggregator/cmd/clickhouse-backup
          resources:
            requests:
              memory: 128Mi
              cpu: "0.1"
            limits:
              # should be at least 512 because MinIO uploads in chunks (128MB by default) plus some internal buffers
              memory: 512Mi
              cpu: "0.2"
          volumeMounts:
            - name: clickhouse-data
              mountPath: /var/lib/clickhouse
            - name: s3
              mountPath: /etc/s3
              readOnly: true
      volumes:
        - name: clickhouse-data
          emptyDir: {}
        - name: s3
          secret:
            secretName: ij-perf-data-minio-bucket
            items:
              - key: AWS_ACCESS_KEY_ID
                path: accessKey
              - key: AWS_SECRET_ACCESS_KEY
                path: secretKey
              - key: MINIO_ENDPOINT
                path: endpoint
