deployment/base/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: report-aggregator
  labels: &LABELS
    app: report-aggregator
spec:
  replicas: 2
  selector:
    matchLabels: *LABELS
  template:
    metadata:
      labels: *LABELS
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: report-aggregator
          image: github.com/JetBrains/ij-perf-report-aggregator/cmd/server
          args: ["--db", "clickhouse:9000", "--nats", "nats://nats:4222"]
          resources:
            requests:
              memory: 256Mi
              cpu: "0.4"
            limits:
              cpu: "0.9"
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health-check
              port: 8080
          livenessProbe:
            httpGet:
              path: /health-check
              port: 8080
