deployment/base/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels: &LABELS
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels: *LABELS
  template:
    metadata:
      labels: *LABELS
    spec:
      containers:
        - name: backend
          image: ko://github.com/JetBrains/ij-perf-report-aggregator/cmd/backend
          resources:
            requests:
              cpu: "0.4"
              memory: 256Mi
            limits:
              cpu: "0.9"
              memory: 512Mi
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health-check
              port: 8080
          livenessProbe:
            httpGet:
              path: /health-check
              port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: backend
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: backend
