deployment/base/victoria-metrics.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: victoria-metrics
  labels: &LABELS
    app: victoria-metrics
spec:
  selector:
    matchLabels: *LABELS
  template:
    metadata:
      labels: *LABELS
    spec:
      containers:
        - name: victoria-metrics
          image: victoriametrics/victoria-metrics:v1.28.0-beta5
          args: ["-retentionPeriod", "120"]
          ports:
            - containerPort: 8428
---
apiVersion: v1
kind: Service
metadata:
  name: victoria-metrics
  labels:
    app: victoria-metrics
spec:
  ports:
  - port: 8428
    protocol: TCP
  selector:
    app: victoria-metrics
